--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskEdit/taskEditUsersPopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskEdit/taskEditUsersPopup.xhtml
@@ -27,7 +27,7 @@
             <h:form id="userForm">
                 <p:dataTable id="userTable"
                              var="user"
-                             value="#{BenutzerverwaltungForm.lazyDTOModel}"
+                             value="#{UserForm.lazyDTOModel}"
                              lazy="true"
                              rows="#{LoginForm.myBenutzer.tableSize}"
                              paginator="true">
