--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/userEdit/userEditChangePasswordPopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/userEdit/userEditChangePasswordPopup.xhtml
@@ -30,28 +30,23 @@
                             <div>
                                 <!-- new password -->
                                 <h:outputLabel for="newPassword" value="#{msgs.newPassword}"/>
-                                <p:password redisplay="true" id="newPassword"
-                                            class="password"
-                                            value="#{BenutzerverwaltungForm.password}"
-                                            label="#{msgs.newPassword}"
-                                            match="newPasswordRepeat"
-                                            required="true"
+                                <p:password redisplay="true" id="newPassword" class="password"
+                                            value="#{UserForm.password}" label="#{msgs.newPassword}"
+                                            match="newPasswordRepeat" required="true"
                                             validatorMessage="#{msgs.passwordsDontMatch}"/>
                             </div>
 
                             <div>
                                 <!-- repeat new password -->
                                 <h:outputLabel for="newPasswordRepeat" value="#{msgs.confirmNewPassword}"/>
-                                <p:password redisplay="true" id="newPasswordRepeat"
-                                            class="password"
-                                            value="#{BenutzerverwaltungForm.password}"
-                                            label="#{msgs.confirmNewPassword}"
+                                <p:password redisplay="true" id="newPasswordRepeat" class="password"
+                                            value="#{UserForm.password}" label="#{msgs.confirmNewPassword}"
                                             required="true"/>
                             </div>
                             <div>
                                 <p:commandButton id="save"
                                                  value="#{msgs.save}"
-                                                 action="#{BenutzerverwaltungForm.changePasswordForCurrentUser}"
+                                                 action="#{UserForm.changePasswordForCurrentUser}"
                                                  icon="fa fa-floppy-o fa-lg"
                                                  iconPos="right"
                                                  validateClient="true"
