--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/userEdit/userEditClientsPopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/userEdit/userEditClientsPopup.xhtml
@@ -37,7 +37,7 @@
                         </p:column>
                         <p:column headerText="#{msgs.actions}" styleClass="actionsColumn">
                             <p:commandLink id="addUserClient"
-                                           action="#{BenutzerverwaltungForm.addToClient}"
+                                           action="#{UserForm.addToClient}"
                                            title="add to client"
                                            update="editForm:userTabView:clientDatatable"
                                            oncomplete="toggleSave()">
