--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/userEdit/userEditProjectsPopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/userEdit/userEditProjectsPopup.xhtml
@@ -39,7 +39,7 @@
                         </p:column>
                         <p:column headerText="#{msgs.actions}" styleClass="actionsColumn">
                             <p:commandLink id="addUserProject"
-                                           action="#{BenutzerverwaltungForm.addToProject}"
+                                           action="#{UserForm.addToProject}"
                                            title="add to project"
                                            update="editForm:userTabView:projectDatatable"
                                            oncomplete="toggleSave()">
