--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskEdit/taskEditUsergroupsPopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskEdit/taskEditUsergroupsPopup.xhtml
@@ -27,7 +27,7 @@
             <h:form id="usergroupForm">
                 <p:dataTable id="usergroupTable"
                              var="usergroup"
-                             value="#{BenutzergruppenForm.lazyDTOModel}"
+                             value="#{UserGroupForm.lazyDTOModel}"
                              lazy="true"
                              rows="#{LoginForm.myBenutzer.tableSize}"
                              paginator="true">
