--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/userEdit/userEditPopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/userEdit/userEditPopup.xhtml
@@ -29,7 +29,7 @@
                 <h:form id="userGroupForm">
                     <p:dataTable var="item"
                                  id="selectUserGroupTable"
-                                 value="#{BenutzergruppenForm.lazyDTOModel}"
+                                 value="#{UserGroupForm.lazyDTOModel}"
                                  lazy="true"
                                  paginator="true"
                                  rows="#{LoginForm.myBenutzer.tableSize}"
