Hide not needed elements in workflow editor

--- a/Kitodo/src/main/webapp/WEB-INF/templates/base.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/base.xhtml
@@ -32,6 +32,7 @@
             <h:outputStylesheet name="css/bpmn-js/bpmn-font/css/bpmn-codes.css"/>
             <h:outputStylesheet name="css/bpmn-js/bpmn-font/css/bpmn-embedded.css"/>
             <h:outputStylesheet name="css/bpmn-js/diagram-js.css"/>
+            <h:outputStylesheet name="css/bpmn-js/editor-custom.css"/>
             <h:outputStylesheet name="css/bpmn-js/properties-panel.css"/>
             <p:growl id="notifications" widgetVar="notifications" severity="info"/>
             <p:growl id="sticky-notifications" widgetVar="sticky-notifications" sticky="true" severity="info"/>
