Add script for batch create

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processes/batchList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processes/batchList.xhtml
@@ -16,6 +16,9 @@
         xmlns:f="http://xmlns.jcp.org/jsf/core"
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:p="http://primefaces.org/ui">
+
+    <h:outputScript library="js" name="batch.js" target="body"/>
+
     <h:form id="batchForm">
         <p:panelGrid id="detailForm" columns="2" cellpadding="10" layout="grid">
             <p:row>
@@ -118,16 +121,17 @@
                     </h:commandLink>
 
                     <h:inputHidden value="#{BatchForm.batchName}" id="batchName"/>
-                    <h:commandLink action="#{BatchForm.renameBatch}" onclick="if(!renameBox())return false">
+                    <h:commandLink action="#{BatchForm.renameBatch}"
+                                   onclick="if(!renameBox('#{msgs.enterBatchName}', '#{msgs.noBatchSelected}', '#{msgs.tooManyBatchesSelected}'))return false">
                         <h:outputText><i class="fa fa-pencil-square-o fa-lg"/> #{msgs.renameBatch}</h:outputText>
                     </h:commandLink>
 
-                    <h:commandLink action="#{BatchForm.createNewBatch}" onclick="if(!newNameBox())return false">
+                    <h:commandLink action="#{BatchForm.createNewBatch}"
+                                   onclick="if(!newNameBox('#{msgs.enterBatchName}', '#{msgs.noProcessSelected}'))return false">
                         <h:outputText><i class="fa fa-plus"/> #{msgs.createNewBatchFromSelectedProcesses}</h:outputText>
                     </h:commandLink>
                 </h:panelGrid>
             </p:row>
-
         </p:panelGrid>
     </h:form>
 </ui:composition>
