--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
@@ -868,6 +868,16 @@ main i.fa {
     line-height: 22px;
 }
 
+.legal-dialog {
+    width: 640px;
+    min-height: 480px;
+}
+
+.legal-texts-select-menu {
+    margin: 0 10px 10px 0;
+    width: 250px;
+}
+
 .select-client-note {
     background: #F94A15;
     padding: 16px 32px 16px 32px;
@@ -1216,7 +1226,8 @@ footer {
     display: inline;
     }
 
-#footer-meta-menu li a {
+#footer-meta-menu li a,
+#footer-meta-menu li input {
     background: #999;
     color: #fff;
     text-decoration: none;
@@ -1226,7 +1237,8 @@ footer {
     margin-bottom: 5px;
     }
 
-#footer-meta-menu li a:hover {
+#footer-meta-menu li a:hover,
+#footer-meta-menu li input:hover{
     background: #005182;
     }
 
