--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/footer.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/footer.xhtml
@@ -11,15 +11,34 @@
  *
 -->
 
-<ui:composition xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+<ui:composition xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+                xmlns:h="http://xmlns.jcp.org/jsf/html"
+                xmlns:p="http://primefaces.org/ui">
     <div class="wrapper">
         <section id="footer-content">
-            <ul id="footer-meta-menu">
-                <li><a href="">#{msgs.imprint}</a></li>
-                <li><a href="">#{msgs.dataPrivacy}</a></li>
-                <li><a href="">#{msgs.termsOfUse}</a></li>
-            </ul>
-            <p>KITODO.PRODUCTION <span>Version #{HelperForm.version}</span></p>
+            <h:form id="legal-menu">
+                <ul id="footer-meta-menu">
+                    <li>
+                        <p:commandLink type="button"
+                                       value="#{msgs.imprint}"
+                                       update=":imprintDialog"
+                                       oncomplete="PF('imprintDialog').show()"/>
+                    </li>
+                    <li>
+                        <p:commandLink type="button"
+                                       value="#{msgs.dataPrivacy}"
+                                       update=":dataPrivacyDialog"
+                                       oncomplete="PF('dataPrivacyDialog').show()"/>
+                    </li>
+                    <li>
+                        <p:commandLink type="button"
+                                       value="#{msgs.termsOfUse}"
+                                       update=":termsOfUseDialog"
+                                       oncomplete="PF('termsOfUseDialog').show()"/>
+                    </li>
+                </ul>
+                <p>KITODO.PRODUCTION <span>Version #{HelperForm.version}</span></p>
+            </h:form>
         </section>
     </div>
 </ui:composition>
