--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processes/progressColumn.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processes/progressColumn.xhtml
@@ -16,13 +16,9 @@
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <h:panelGroup
-            id="processProgress"
+            class="process-progress"
             title="#{msgs.progress}"
             style="
-                display: block;
-                width: 110px;
-                height: 16px;
-                border-radius: 1px;
                 background-image: linear-gradient(
                     to right,
                     var(--progress-closed),
