--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processes/batchList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processes/batchList.xhtml
@@ -36,10 +36,10 @@
 
                 <div>
                     <p:outputLabel for="selectBatches" value="#{msgs.selectPlease}"/>
-                    <h:selectManyListbox value="#{BatchForm.selectedBatches}" class="input"
-                                         size="20" id="selectBatches">
-                        <f:selectItems var="batch" value="#{BatchForm.currentBatches}"
-                                       itemLabel="#{batch}" itemValue="#{batch.id}"/>
+                    <h:selectManyListbox value="#{BatchForm.selectedBatches}" class="input" size="20" id="selectBatches"
+                                         onchange="submit()" valueChangeListener="#{BatchForm.changeSelectedBatchId}">
+                        <f:selectItems var="batch" value="#{BatchForm.currentBatches}" itemLabel="#{batch}"
+                                       itemValue="#{batch.id}"/>
                     </h:selectManyListbox>
                 </div>
 
@@ -77,9 +77,10 @@
                         <h:outputText><i class="fa fa-print"/> #{msgs.docketPrint}</h:outputText>
                     </h:commandLink>
 
-                    <h:commandLink action="#{BatchForm.editProperties}">
-                        <h:outputText><i class="fa fa-pencil-square-o fa-lg"/> #{msgs.propertyEdit}</h:outputText>
-                    </h:commandLink>
+                    <h:link outcome="batchProperties" title="#{msgs.propertyEdit}">
+                        <f:param name="id" value="#{BatchForm.selectedBatchId}"/>
+                        <i class="fa fa-pencil-square-o fa-lg"/> <h:outputText value="#{msgs.propertyEdit}"/>
+                    </h:link>
 
                     <h:commandLink action="#{BatchForm.deleteBatch}">
                         <h:outputText><i class="fa fa-trash-o"/> #{msgs.deleteBatch}</h:outputText>
