--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processes/batchList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processes/batchList.xhtml
@@ -16,175 +16,118 @@
         xmlns:f="http://xmlns.jcp.org/jsf/core"
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:p="http://primefaces.org/ui">
-    <h:form>
-        <table border="0" align="center" width="100%" cellpadding="15">
-            <tr>
-                <td>
+    <h:form id="batchForm">
+        <p:panelGrid id="detailForm" columns="2" cellpadding="10" layout="grid">
+            <p:row>
+                <h4><h:outputText value="#{msgs.batches}"/></h4>
 
-                    <!-- headline -->
-                    <h3>
-                        <h:outputText id="id4" value="#{msgs.batches}"/>
-                    </h3>
+                <div>
+                    <p:outputLabel for="batchFilter" value="#{msgs.filter}"/>
+                    <p:inputText id="batchFilter" placeholder="#{msgs.filter}" styleClass="input-with-button"
+                                 value="#{BatchForm.batchfilter}">
+                        <p:ajax event="blur"/>
+                    </p:inputText>
+                    <p:commandButton id="batchFilterButton" action="#{BatchForm.filterBatches}" type="button"
+                                     icon="fa fa-search"/>
+                </div>
 
-                    <!-- global warnings and error messages -->
-                    <h:messages id="id5" globalOnly="true" errorClass="text_red" infoClass="text_blue"
-                                showDetail="true" showSummary="true" tooltip="true"/>
+                <div>
+                    <p:outputLabel for="selectBatches" value="#{msgs.selectPlease}"/>
+                    <h:selectManyListbox value="#{BatchForm.selectedBatches}" class="input"
+                                         size="20" id="selectBatches">
+                        <f:selectItems var="batch" value="#{BatchForm.currentBatches}"
+                                       itemLabel="#{batch}" itemValue="#{batch.id}"/>
+                    </h:selectManyListbox>
+                </div>
 
-                    <table cellpadding="3" cellspacing="0" width="100%" class="eingabeBoxen">
-                        <tr>
-                            <td colspan="2" class="eingabeBoxen_row1">
-                                <h:outputText value="#{msgs.actions}"/>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td width="50%" class="eingabeBoxen_row2"
-                                style="padding-left: 20px;vertical-align:top;">
+                <h:panelGrid columns="1" cellpadding="2px">
+                    <h:commandLink action="#{BatchForm.exportBatch}">
+                        <h:outputText><i class="fa fa-file"/> #{msgs.exportBatch}</h:outputText>
+                    </h:commandLink>
 
-                                <h4>
-                                    <h:outputText value="#{msgs.batches}"/>
-                                </h4>
+                    <h:panelGroup>
+                        <h:outputText><i class="fa fa-pencil-square-o fa-lg"/></h:outputText>
+                        <h:outputText value="#{msgs.typeSet}"/>
+                        <h:outputText value=" "/>
+                        <h:commandLink action="#{BatchForm.setLogistic}">
+                            <h:outputText value="#{msgs.typeSetLogistic}"/>
+                        </h:commandLink>
+                        <h:outputText value=", "/>
+                        <h:commandLink action="#{BatchForm.setNewspaper}">
+                            <h:outputText value="#{msgs.typeSetNewspaper}"/>
+                        </h:commandLink>
+                        <h:outputText value=", "/>
+                        <h:commandLink action="#{BatchForm.setSerial}">
+                            <h:outputText value="#{msgs.typeSetSerial}"/>
+                        </h:commandLink>
+                    </h:panelGroup>
 
-                                <h:panelGroup style="margin-bottom:10px;display:block;">
-                                    <h:inputText value="#{BatchForm.batchfilter}" style="width:350px"/>
-                                    <h:commandButton action="#{BatchForm.filterBatches}"
-                                                     title="#{msgs.filter}" value="#{msgs.filter}"/>
-                                </h:panelGroup>
+                    <h:commandLink action="#{BatchForm.loadProcessData}">
+                        <h:outputText><i class="fa fa-refresh"/> #{msgs.loadProcessesOfBatch}</h:outputText>
+                    </h:commandLink>
 
-                                <h:selectManyListbox value="#{BatchForm.selectedBatches}"
-                                                     style="width:90%;margin-bottom:10px;display:block;"
-                                                     size="20" id="selectBatches">
-                                    <f:selectItems var="batch" value="#{BatchForm.currentBatches}"
-                                                   itemLabel="#{batch}" itemValue="#{batch.id}"/>
-                                </h:selectManyListbox>
+                    <h:commandLink action="#{BatchForm.filterProcesses}">
+                        <h:outputText><i class="fa fa-refresh"/> #{msgs.loadAllProcesses}</h:outputText>
+                    </h:commandLink>
 
-                                <h:panelGrid columns="1" cellpadding="2px">
-                                    <h:commandLink action="#{BatchForm.exportBatch}">
-                                        <h:graphicImage alt="reload"
-                                                        value="/pages/images/buttons/dms.png"
-                                                        style="vertical-align:middle"/>
-                                        <h:outputText value="#{msgs.exportBatch}"/>
-                                    </h:commandLink>
+                    <h:commandLink action="#{BatchForm.downloadDocket}">
+                        <h:outputText><i class="fa fa-print"/> #{msgs.docketPrint}</h:outputText>
+                    </h:commandLink>
 
-                                    <h:panelGroup>
-                                        <h:graphicImage alt="new" value="/pages/images/buttons/edit.gif"
-                                                        style="vertical-align:middle"/>
-                                        <h:outputText value="#{msgs.typeSet}"/>
-                                        <h:outputText value=" "/>
-                                        <h:commandLink action="#{BatchForm.setLogistic}">
-                                            <h:outputText value="#{msgs.typeSetLogistic}"/>
-                                        </h:commandLink>
-                                        <h:outputText value=", "/>
-                                        <h:commandLink action="#{BatchForm.setNewspaper}">
-                                            <h:outputText value="#{msgs.typeSetNewspaper}"/>
-                                        </h:commandLink>
-                                        <h:outputText value=", "/>
-                                        <h:commandLink action="#{BatchForm.setSerial}">
-                                            <h:outputText value="#{msgs.typeSetSerial}"/>
-                                        </h:commandLink>
-                                    </h:panelGroup>
+                    <h:commandLink action="#{BatchForm.editProperties}">
+                        <h:outputText><i class="fa fa-pencil-square-o fa-lg"/> #{msgs.propertyEdit}</h:outputText>
+                    </h:commandLink>
 
-                                    <h:commandLink action="#{BatchForm.loadProcessData}">
-                                        <h:graphicImage alt="reload"
-                                                        value="/pages/images/buttons/reload_doc.gif"
-                                                        style="vertical-align:middle"/>
-                                        <h:outputText value="#{msgs.loadProcessesOfBatch}"/>
-                                    </h:commandLink>
+                    <h:commandLink action="#{BatchForm.deleteBatch}">
+                        <h:outputText><i class="fa fa-trash-o"/> #{msgs.deleteBatch}</h:outputText>
+                    </h:commandLink>
+                </h:panelGrid>
+            </p:row>
+            <p:row>
+                <h4><h:outputText value="#{msgs.processes}"/></h4>
 
-                                    <h:commandLink action="#{BatchForm.filterProcesses}">
-                                        <h:graphicImage alt="reload"
-                                                        value="/pages/images/buttons/reload_doc.gif"
-                                                        style="vertical-align:middle"/>
-                                        <h:outputText value="#{msgs.loadAllProcesses}"/>
-                                    </h:commandLink>
+                <div>
+                    <p:outputLabel for="batchFilter" value="#{msgs.filter}"/>
+                    <p:inputText id="processFilter" placeholder="#{msgs.filter}" styleClass="input-with-button"
+                                 value="#{BatchForm.processfilter}">
+                        <p:ajax event="blur"/>
+                    </p:inputText>
+                    <p:commandButton id="processFilterButton" action="#{BatchForm.filterProcesses}" type="button"
+                                     icon="fa fa-search"/>
+                </div>
 
-                                    <h:commandLink action="#{BatchForm.downloadDocket}">
-                                        <h:graphicImage alt="download docket"
-                                                        value="/pages/images/buttons/laufzettel_wide.png"
-                                                        style="vertical-align:middle"/>
-                                        <h:outputText value="#{msgs.docketPrint}"/>
-                                    </h:commandLink>
+                <div>
+                    <p:outputLabel for="selectProcesses" value="#{msgs.selectPlease}"/>
+                    <h:selectManyListbox value="#{BatchForm.selectedProcesses}" converter="#{processConverter}"
+                                         class="input" size="20" id="selectProcesses">
+                        <f:selectItems value="#{BatchForm.currentProcessesAsSelectItems}"/>
+                    </h:selectManyListbox>
+                </div>
 
-                                    <h:commandLink action="#{BatchForm.editProperties}">
-                                        <h:graphicImage alt="edit batch properties" value="/pages/images/buttons/edit.gif"
-                                                        style="vertical-align:middle"/>
-                                        <h:outputText value="#{msgs.propertyEdit}"/>
-                                    </h:commandLink>
+                <h:panelGrid columns="1" cellpadding="2px">
+                    <h:commandLink action="#{BatchForm.loadBatchData}">
+                        <h:outputText><i class="fa fa-refresh"/> #{msgs.loadAssociatedBatchOfProcess}</h:outputText>
+                    </h:commandLink>
 
-                                    <h:commandLink action="#{BatchForm.deleteBatch}"
-                                                   style="margin-left:7px;">
-                                        <h:graphicImage alt="delete batch"
-                                                        value="/pages/images/buttons/waste1a_20px.gif"
-                                                        style="vertical-align:middle;margin-right:7px"/>
-                                        <h:outputText value="#{msgs.deleteBatch}"/>
-                                    </h:commandLink>
+                    <h:commandLink action="#{BatchForm.addProcessesToBatch}">
+                        <h:outputText><i class="fa fa-check-circle-o"/> #{msgs.addToSelectedBatch}</h:outputText>
+                    </h:commandLink>
 
-                                </h:panelGrid>
-                            </td>
+                    <h:commandLink action="#{BatchForm.removeProcessesFromBatch}">
+                        <h:outputText><i class="fa fa-times-circle-o"/> #{msgs.removeFromAssociatedBatch}</h:outputText>
+                    </h:commandLink>
 
-                            <td width="50%" class="eingabeBoxen_row2"
-                                style="padding-left: 20px;vertical-align:top;">
-                                <h4>
-                                    <h:outputText value="#{msgs.processes}"/>
-                                </h4>
+                    <h:inputHidden value="#{BatchForm.batchName}" id="batchName"/>
+                    <h:commandLink action="#{BatchForm.renameBatch}" onclick="if(!renameBox())return false">
+                        <h:outputText><i class="fa fa-pencil-square-o fa-lg"/> #{msgs.renameBatch}</h:outputText>
+                    </h:commandLink>
 
-                                <h:panelGroup style="margin-bottom:10px;display:block;">
-                                    <h:inputText value="#{BatchForm.processfilter}" style="width:350px"/>
-                                    <h:commandButton action="#{BatchForm.filterProcesses}"
-                                                     value="#{msgs.filter}" title="#{msgs.filter}"/>
-                                </h:panelGroup>
+                    <h:commandLink action="#{BatchForm.createNewBatch}" onclick="if(!newNameBox())return false">
+                        <h:outputText><i class="fa fa-plus"/> #{msgs.createNewBatchFromSelectedProcesses}</h:outputText>
+                    </h:commandLink>
+                </h:panelGrid>
+            </p:row>
 
-                                <h:selectManyListbox value="#{BatchForm.selectedProcesses}"
-                                                     converter="#{processConverter}"
-                                                     style="width:90%;margin-bottom:10px;display:block;"
-                                                     size="20" id="selectProcesses">
-                                    <f:selectItems value="#{BatchForm.currentProcessesAsSelectItems}"/>
-                                </h:selectManyListbox>
-
-                                <h:panelGrid columns="1" cellpadding="2px">
-                                    <h:commandLink action="#{BatchForm.loadBatchData}">
-                                        <h:graphicImage alt="reload batch data"
-                                                        value="/pages/images/buttons/reload_doc.gif"
-                                                        style="vertical-align:middle"/>
-                                        <h:outputText value="#{msgs.loadAssociatedBatchOfProcess}"/>
-                                    </h:commandLink>
-
-                                    <h:commandLink action="#{BatchForm.addProcessesToBatch}">
-                                        <h:graphicImage alt="add processes to batch"
-                                                        value="/pages/images/buttons/ok.gif"
-                                                        style="vertical-align:middle"/>
-                                        <h:outputText value="#{msgs.addToSelectedBatch}"/>
-                                    </h:commandLink>
-
-                                    <h:commandLink action="#{BatchForm.removeProcessesFromBatch}">
-                                        <h:graphicImage alt="remove processes from batch"
-                                                        value="/pages/images/buttons/cancel1.gif"
-                                                        style="vertical-align:middle"/>
-                                        <h:outputText value="#{msgs.removeFromAssociatedBatch}"/>
-                                    </h:commandLink>
-
-                                    <h:inputHidden value="#{BatchForm.batchName}" id="batchName"/>
-                                    <h:commandLink action="#{BatchForm.renameBatch}"
-                                                   onclick="if(!renameBox())return false">
-                                        <h:graphicImage alt="new" value="/pages/images/buttons/edit.gif"
-                                                        style="vertical-align:middle"/>
-                                        <h:outputText value="#{msgs.renameBatch}"/>
-                                    </h:commandLink>
-
-                                    <h:commandLink action="#{BatchForm.createNewBatch}"
-                                                   onclick="if(!newNameBox())return false">
-                                        <h:graphicImage alt="new"
-                                                        value="/pages/images/buttons/star_blue.gif"
-                                                        style="vertical-align:middle"/>
-                                        <h:outputText value="#{msgs.createNewBatchFromSelectedProcesses}"/>
-                                    </h:commandLink>
-                                </h:panelGrid>
-                            </td>
-                        </tr>
-
-                    </table>
-
-                </td>
-            </tr>
-        </table>
+        </p:panelGrid>
     </h:form>
 </ui:composition>
